# dtcvote/controllers/voter/elections.py
@@ -1,25 +1,19 @@
-from typing import List
-
+from typing import List, Dict
 from sqlalchemy import select
-
 from dtcvote.database import db_exec
 from dtcvote.models.orm import ElectionVoter, Election
 
 
-def search(ID):  # noqa: E501
+def search(id_: int) -> List[Dict]:
     """voter_id_elections_get
 
-    Returns all elections for voter ID # noqa: E501
+    Returns all elections for voter ID
 
-    :param ID: ID of pet to fetch
-    :type ID: int
-
-    :rtype: List[ElectionResponse]
+    :param id_: ID of pet to fetch
     """
-    stmt = select(Election).join(ElectionVoter).where(ElectionVoter.voter_id == ID)
+    stmt = select(Election).join(ElectionVoter).where(ElectionVoter.voter_id == id_)
     elections = db_exec(stmt).scalars()
     if not elections:
         return f"No elections found for this voter.", 404
     else:
         return [e.public_rec_dict for e in elections]
-
